feat: Added support for border

--- a/Tests/SwiftEmailTests/__Snapshots__/EmailTests/testRenderHTML.1.html
+++ b/Tests/SwiftEmailTests/__Snapshots__/EmailTests/testRenderHTML.1.html
@@ -55,13 +55,11 @@
                           <td width="20"></td>
                           <td>
                             <span style="color:#000">
-                              <span class="EmailTests_37">
-                                <i>
-                                  <b style="font-size:16px;font-weight:700;font-family:-apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;font-style:italic;background:#f00">
-                                    Hover me
-                                  </b>
-                                </i>
-                              </span>
+                              <i>
+                                <b class="EmailTests_37" style="background:#f00;font-size:16px;font-weight:700;font-family:-apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;font-style:italic">
+                                  Hover me
+                                </b>
+                              </i>
                             </span>
                           </td>
                           <td width="20"></td>
