--- a/Tests/SwiftEmailTests/__Snapshots__/NavigationLinkTests/testNavigationLinkWithButtonStyle.1.html
+++ b/Tests/SwiftEmailTests/__Snapshots__/NavigationLinkTests/testNavigationLinkWithButtonStyle.1.html
@@ -1,17 +1,42 @@
-<a href="https://qualtive.io/">
-  <table border="0" cellpadding="0" cellspacing="0" data-tag="HStack">
-    <tr>
-      <td height="10"></td>
-    </tr>
-    <tr>
-      <td width="40"></td>
-      <td valign="middle">
-        Link
-      </td>
-      <td width="40"></td>
-    </tr>
-    <tr>
-      <td height="10"></td>
-    </tr>
-  </table>
-</a>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta content="text/html charset=UTF-8" http-equiv="Content-Type" />
+    <meta content="width=device-width,initial-scale=1.0" name="viewport" />
+    <meta content="light dark" name="color-scheme" />
+    <meta content="light dark" name="supported-color-schemes" />
+<style>
+  .ExternalClass {width:100%;}
+  .NavigationLinkTests_34:hover {
+    border: 1px solid #0f0 !important;
+  }
+
+  @media (prefers-color-scheme: dark) {
+  body {
+      background: #000 !important;
+      color: #fff !important;
+    }
+  }
+</style>
+  </head>
+  <body style="background:#fff;color:#000;font-family:-apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;font-size:16px;font-weight:400;margin:0">
+    <a href="https://qualtive.io/">
+      <table border="0" cellpadding="0" cellspacing="0" class="NavigationLinkTests_34" data-tag="HStack" style="border:1px solid #000">
+        <tr>
+          <td height="10"></td>
+        </tr>
+        <tr>
+          <td width="40"></td>
+          <td valign="middle">
+            Link
+          </td>
+          <td width="40"></td>
+        </tr>
+        <tr>
+          <td height="10"></td>
+        </tr>
+      </table>
+    </a>
+  </body>
+</html>
