--- a/Tests/SwiftEmailTests/__Snapshots__/NavigationLinkTests/testNavigationLinkWithButtonStyle.1.html
+++ b/Tests/SwiftEmailTests/__Snapshots__/NavigationLinkTests/testNavigationLinkWithButtonStyle.1.html
@@ -11,6 +11,9 @@
   .NavigationLinkTests_34:hover {
     border: 1px solid #0f0 !important;
   }
+  .NavigationLinkTests_35:hover {
+    text-decoration: underline !important;
+  }
 
   @media (prefers-color-scheme: dark) {
   body {
@@ -21,8 +24,8 @@
 </style>
   </head>
   <body style="background:#fff;color:#000;font-family:-apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;font-size:16px;font-weight:400;margin:0">
-    <a href="https://qualtive.io/">
-      <table border="0" cellpadding="0" cellspacing="0" class="NavigationLinkTests_34" data-tag="HStack" style="border:1px solid #000">
+    <a href="https://qualtive.io/" style="text-decoration:none">
+      <table border="0" cellpadding="0" cellspacing="0" class="NavigationLinkTests_34 NavigationLinkTests_35" data-tag="HStack" style="border:1px solid #000">
         <tr>
           <td height="10"></td>
         </tr>
