feat: Added support for corner radius

--- a/Tests/SwiftEmailTests/__Snapshots__/EmailTests/testRenderHTML.1.html
+++ b/Tests/SwiftEmailTests/__Snapshots__/EmailTests/testRenderHTML.1.html
@@ -14,6 +14,9 @@
   .EmailTests_37:hover {
     color: #00f !important;
   }
+  .EmailTests_42:hover {
+    border-radius: 50px !important;
+  }
 
   @media (prefers-color-scheme: dark) {
   ._d {
@@ -47,7 +50,7 @@
                     </td>
                     <td width="10"></td>
                     <td valign="top">
-                      <table border="0" cellpadding="0" cellspacing="0" data-tag="padding" style="background:#0f0">
+                      <table border="0" cellpadding="0" cellspacing="0" class="EmailTests_42" data-tag="padding" style="background:#0f0;border-radius:10px">
                         <tr>
                           <td height="20"></td>
                         </tr>
