--- a/Tests/SwiftEmailTests/__Snapshots__/NavigationLinkTests/testNavigationLinkWithButtonStyle.1.html
+++ b/Tests/SwiftEmailTests/__Snapshots__/NavigationLinkTests/testNavigationLinkWithButtonStyle.1.html
@@ -25,7 +25,7 @@
   </head>
   <body style="background:#fff;color:#000;font-family:-apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;font-size:16px;font-weight:400;margin:0">
     <a href="https://qualtive.io/" style="text-decoration:none">
-      <table border="0" cellpadding="0" cellspacing="0" class="NavigationLinkTests_34 NavigationLinkTests_35" data-tag="HStack" style="border:1px solid #000">
+      <table border="0" cellpadding="0" cellspacing="0" class="NavigationLinkTests_34 NavigationLinkTests_35" data-tag="HStack" style="border-radius:6px;border:1px solid #000">
         <tr>
           <td height="10"></td>
         </tr>
