--- a/Tests/SwiftEmailTests/__Snapshots__/NavigationLinkTests/testNavigationLinkWithButtonStyle.1.html
+++ b/Tests/SwiftEmailTests/__Snapshots__/NavigationLinkTests/testNavigationLinkWithButtonStyle.1.html
@@ -9,10 +9,10 @@
 <style>
   .ExternalClass {width:100%;}
   .NavigationLinkTests_34:hover {
-    border: 1px solid #0f0 !important;
+    background: #000 !important;
   }
   .NavigationLinkTests_35:hover {
-    text-decoration: underline !important;
+    color: #fff !important;
   }
 
   @media (prefers-color-scheme: dark) {
@@ -24,7 +24,7 @@
 </style>
   </head>
   <body style="background:#fff;color:#000;font-family:-apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;font-size:16px;font-weight:400;margin:0">
-    <a href="https://qualtive.io/" style="text-decoration:none">
+    <a href="https://qualtive.io/" style="color:#000;text-decoration:none">
       <table border="0" cellpadding="0" cellspacing="0" class="NavigationLinkTests_34 NavigationLinkTests_35" data-tag="HStack" style="border-radius:6px;border:1px solid #000">
         <tr>
           <td height="10"></td>
