feat: Render foregroundStyle when needed instead of wrapping in node

--- a/Tests/SwiftEmailTests/__Snapshots__/EmailTests/testRenderHTML.1.html
+++ b/Tests/SwiftEmailTests/__Snapshots__/EmailTests/testRenderHTML.1.html
@@ -57,13 +57,11 @@
                         <tr>
                           <td width="20"></td>
                           <td>
-                            <span style="color:#000">
-                              <i>
-                                <b class="EmailTests_37" style="background:#f00;font-size:16px;font-weight:700;font-family:-apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;font-style:italic">
-                                  Hover me
-                                </b>
-                              </i>
-                            </span>
+                            <i>
+                              <b class="EmailTests_37" style="background:#f00;color:#000;font-size:16px;font-weight:700;font-family:-apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;font-style:italic">
+                                Hover me
+                              </b>
+                            </i>
                           </td>
                           <td width="20"></td>
                         </tr>
