feat: Set default link color in dark mode when using NavigationLink

--- a/Tests/SwiftEmailTests/__Snapshots__/NavigationLinkTests/testNavigationLinkWithButtonStyle.1.html
+++ b/Tests/SwiftEmailTests/__Snapshots__/NavigationLinkTests/testNavigationLinkWithButtonStyle.1.html
@@ -19,6 +19,9 @@
   .NavigationLinkTests_33 {
       border: 1px solid #fff !important;
     }
+  a {
+      color: #fff !important;
+    }
   body {
       background: #000 !important;
       color: #fff !important;
