feat: Automatically include alternative selectors when style has altenrative

--- a/Tests/SwiftEmailTests/__Snapshots__/NavigationLinkTests/testNavigationLinkWithButtonStyle.1.html
+++ b/Tests/SwiftEmailTests/__Snapshots__/NavigationLinkTests/testNavigationLinkWithButtonStyle.1.html
@@ -19,6 +19,12 @@
   .NavigationLinkTests_33 {
       border: 1px solid #fff !important;
     }
+  .NavigationLinkTests_34:hover {
+      background: #fff !important;
+    }
+  .NavigationLinkTests_35:hover {
+      color: #000 !important;
+    }
   a {
       color: #fff !important;
     }
