feat: Added active user interaction

--- a/Tests/SwiftEmailTests/__Snapshots__/NavigationLinkTests/testNavigationLinkWithButtonStyle.1.html
+++ b/Tests/SwiftEmailTests/__Snapshots__/NavigationLinkTests/testNavigationLinkWithButtonStyle.1.html
@@ -8,22 +8,25 @@
     <meta content="light dark" name="supported-color-schemes" />
 <style>
   .ExternalClass {width:100%;}
-  .NavigationLinkTests_34:hover {
+  .NavigationLinkTests_35:hover {
     background: #000 !important;
   }
-  .NavigationLinkTests_35:hover {
+  .NavigationLinkTests_37:hover {
+    color: #fff !important;
+  }
+  .NavigationLinkTests_34:active {
+    border: 1px solid #808080 !important;
+  }
+  .NavigationLinkTests_36:active {
+    background: #808080 !important;
+  }
+  .NavigationLinkTests_38:active {
     color: #fff !important;
   }
 
   @media (prefers-color-scheme: dark) {
   .NavigationLinkTests_33 {
       border: 1px solid #fff !important;
-    }
-  .NavigationLinkTests_34:hover {
-      background: #fff !important;
-    }
-  .NavigationLinkTests_35:hover {
-      color: #000 !important;
     }
   a {
       color: #fff !important;
@@ -32,12 +35,21 @@
       background: #000 !important;
       color: #fff !important;
     }
+  .NavigationLinkTests_35:hover {
+      background: #fff !important;
+    }
+  .NavigationLinkTests_37:hover {
+      color: #000 !important;
+    }
+  .NavigationLinkTests_38:active {
+      color: #000 !important;
+    }
   }
 </style>
   </head>
   <body style="background:#fff;color:#000;font-family:-apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;font-size:16px;font-weight:400;margin:0">
     <a href="https://qualtive.io/" style="color:#000;text-decoration:none">
-      <table border="0" cellpadding="0" cellspacing="0" class="NavigationLinkTests_33 NavigationLinkTests_34 NavigationLinkTests_35" data-tag="HStack" style="border-radius:6px;border:1px solid #000">
+      <table border="0" cellpadding="0" cellspacing="0" class="NavigationLinkTests_33 NavigationLinkTests_34 NavigationLinkTests_35 NavigationLinkTests_36 NavigationLinkTests_37 NavigationLinkTests_38" data-tag="HStack" style="border-radius:6px;border:1px solid #000">
         <tr>
           <td height="10"></td>
         </tr>
