feat: Added support for rendering plain text

--- a/Tests/SwiftEmailTests/__Snapshots__/EmailTests/testRender.1.html
+++ b/Tests/SwiftEmailTests/__Snapshots__/EmailTests/testRender.1.html
@@ -46,7 +46,7 @@
                 <table border="0" cellpadding="0" cellspacing="0" data-tag="HStack">
                   <tr>
                     <td valign="top">
-                      This is a text
+                      This is a text.
                     </td>
                     <td width="10"></td>
                     <td valign="top">
@@ -79,7 +79,7 @@
             </tr>
             <tr align="left">
               <td>
-                This is a text on another row
+                This is a text on another row.
               </td>
             </tr>
             <tr>
