feat: Added support for custom divider color

--- a/Tests/SwiftEmailTests/__Snapshots__/EmailTests/testRender.1.html
+++ b/Tests/SwiftEmailTests/__Snapshots__/EmailTests/testRender.1.html
@@ -87,7 +87,7 @@
             </tr>
             <tr align="left">
               <td>
-                <hr/>
+                <hr style="border:0;border-top:1px solid #D6D3D4" />
               </td>
             </tr>
             <tr>
